feat: Complete TradeMaster enterprise architecture with Consul service discovery and comprehensive API documentation
## Major Enhancements

### 🚀 OpenAPI 3.0.3 Specification & Kong Gateway Integration
- Created comprehensive API documentation with Kong Gateway extensions
- Implemented Kong-compatible health endpoint at `/api/v2/health`
- Added detailed API schemas, security definitions, and error responses
- Integrated circuit breaker patterns and rate limiting configurations

### 🔧 Consul Service Discovery Migration
- Migrated from Eureka to Consul for service discovery and configuration
- Implemented hierarchical Consul KV configuration management
- Removed Spring Cloud Config Server (simplified architecture per requirements)
- Added automated Consul configuration setup and management scripts

### 📦 Docker Compose & Infrastructure Optimization
- Enhanced docker-compose-consul.yml with comprehensive health checks
- Added service dependency management and proper startup sequencing
- Integrated Kong Gateway with PostgreSQL backend and migrations
- Added Prometheus monitoring with comprehensive metrics collection

### 🛠️ Automation & Testing Infrastructure
- Created automated startup script (start-trademaster.sh) for one-command deployment
- Implemented comprehensive end-to-end testing suite (test-setup.sh)
- Added advanced Consul configuration management tools
- Enhanced monitoring and health check validation

### 📚 Documentation & User Experience
- Created comprehensive README.md with architecture diagrams and setup guides
- Added troubleshooting guides and performance benchmarks
- Documented all configuration patterns and deployment strategies
- Provided quick reference commands and health check endpoints

### 🔒 Security & Quality Enhancements
- Implemented zero trust security patterns with tiered access control
- Added comprehensive audit logging and correlation ID tracking
- Enhanced JWT authentication with proper validation
- Applied functional programming patte